# casoar

./: .gitignore  Makefile  README.md  pyproject.toml
src/captain_hook/: cli.py  main.py  writer.py
src/captain_hook/models/: __init__.py  command.py  hook.py
src/casoar/: cli.py  main.py  writer.py
src/casoar/models/: __init__.py  command.py  hook.py
