[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jocelyn Gas <jocelyn.gas@dillygence.com>"]
description = "Git hooks made easy with local dev dependencies"
license = "MIT License"
name = "captain-hook"
packages = [{ from = "src", include = "captain_hook" }]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
typer = "^0.9.0"
pydantic = "^2.6.1"
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0.1"
rich = "^13.7.0"
tomlkit = "^0.12.3"

[tool.poetry.scripts]
captain-hook = "src.captain_hook.cli:app"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
toml-sort = "^0.23.1"
