[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jocelyn Gas <jocelyn.gas@dillygence.com>"]
description = "Git hooks made easy with local dev dependencies"
license = "MIT License"
name = "casoar"
packages = [{ from = "src", include = "casoar" }]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
typer = "^0.9.0"
pydantic = "^2.6.1"
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0.1"
rich = "^13.7.0"
tomlkit = "^0.12.3"

[tool.poetry.scripts]
casoar = "src.casoar.cli:app"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
toml-sort = "^0.23.1"
commitizen = "^3.14.1"

[tool.casoar]
virtual_env = ".venv"

[[tool.casoar.pre-commit]]
command = "poetry run ruff format --check"
silent = true
message = "Python files not formatted correctly."

[[tool.casoar.pre-commit]]
command = "poetry run ruff"
silent = true
message = "Please ensure your code is linted before commiting"

[[tool.casoar.commit-msg]]
command = "poetry run cz check"
silent = true
message = "Please follow the commit message convention"
