[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jocelyn Gas <jocelyn.gas@dillygence.com>"]
description = "Git hooks made easy with local dev dependencies"
license = "MIT License"
name = "casoar"
packages = [{ from = "src", include = "casoar" }]
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
typer = "^0.9.0"
pydantic = "^2.6.1"
python = "^3.10"
rich = "^13.7.0"
tomlkit = "^0.12.3"

[tool.poetry.scripts]
casoar = "casoar.cli:app"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
toml-sort = "^0.23.1"
commitizen = "^3.14.1"

[tool.casoar]
virtual_env = ".venv"

[[tool.casoar.pre-commit]]
command = "ruff format --check --exclude=\"**/.venv/*\""
message = "Please format your code"

[[tool.casoar.pre-commit]]
command = "ruff check --exclude=\"**/.venv/*\""
message = "Please lint your code"

[[tool.casoar.commit-msg]]
command = "cz check --commit-msg-file $1"
message = "Please check your commit message"
